--- a/contact.html
+++ b/contact.html
@@ -183,11 +183,12 @@
                 <i class="fa fa-phone"></i>
                 <p>Telefone: (61) 3107-1036 <br>
                   Diretor de Comercial (Marcos) (61) 9 8165-7690<br>
-              <a href="https://api.whatsapp.com/send?phone=5561991033751&text=olá!%20vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp clicando aqui</a></p>
+             </p>
+             <a class="btn btn-primary" style="margin-bottom: 20px;background-color: rgba(0,226,126); border-color: rgba(0,226,126)" href="https://api.whatsapp.com/send?phone=5561981657690&text=Olá!%20Vim%20pelo%20site.%20Tudo%20Bom?">Fale conosco no WhatsApp<br> clicando aqui <br></a>
               </div>
             </div>
 
-            <div class="social-links">
+            <div style="position: relative; left: 22.5%;" class="social-links">
               <a href="https://www.facebook.com.br/enetec.consultoria" class="facebook">
                 <i class="fa fa-facebook"></i>
               </a>
