--- a/fotovoltaica/index.html
+++ b/fotovoltaica/index.html
@@ -158,7 +158,8 @@
  position: relative;
     top: 50%;
     left: 25%;
-    margin-right: -50%;">
+    margin-right: -50%;
+    text-align: center;">
         <div class="row">
           <div class="col-md-6 col-sm-12">
             <div class="block" style="width:100%;">
