--- a/fotovoltaica/index.html
+++ b/fotovoltaica/index.html
@@ -318,6 +318,9 @@
     })();
   </script>
   <!--End of Tawk.to Script-->
+  <script src="mostrar.js"></script>
+
+  <script src="simulador.js"></script>
 </body>
 
 </html>
