--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <!--==========================
       Services Section
       ============================-->
-    <section id="services" style="background-image: url(img/hero-bg2.jpg);">
+    <section id="services" style="background: rgb(66,120,130);">
       <div class="container wow fadeIn">
         <div class="section-header">
           <h3 class="section-title" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">O que podemos fazer por você</h3>
