--- a/contact.html
+++ b/contact.html
@@ -202,7 +202,7 @@
             <div class="form">
               <div id="sendmessage">Your message has been sent. Thank you!</div>
               <div id="errormessage"></div>
-              <form action="formspree.io/victor.silva@enetec.unb.br" method="post" role="form" class="contactForm">
+              <form action="https://formspree.io/victor.silva@enetec.unb.br" method="post" role="form" class="contactForm">
                 <div class="form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Seu Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars"
                   />
