--- a/contact.html
+++ b/contact.html
@@ -209,7 +209,7 @@
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Seu Email" data-rule="email" data-msg="Please enter a valid email"
+                  <input type="email" class="form-control" name="_replyto" id="email" placeholder="Seu Email" data-rule="email" data-msg="Please enter a valid email"
                   />
                   <div class="validation"></div>
                 </div>
@@ -223,7 +223,7 @@
                   <div class="validation"></div>
                 </div>
                 <div class="text-center">
-                  <button type="submit">Enviar mensagem</button>
+                  <button ><input type="submit">Enviar mensagem</input></button>
                 </div>
               </form>
             </div>
