--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h3 class="section-title">Contato</h3>
-          <p class="section-description">Fale conosco para obter mais informações sobre nosso serviços, estamos a disposição para ajudá-los.</p>
+          <p class="section-description">Fale conosco para obter mais informações sobre nosso serviços, estamos a disposição para ajudá-los. Responderemos em 24h no máximo</p>
         </div>
       </div>
 
@@ -200,30 +200,29 @@
 
           <div class="col-lg-5 col-md-8">
             <div class="form">
-              <div id="sendmessage">Your message has been sent. Thank you!</div>
               <div id="errormessage"></div>
               <form action="https://formspree.io/victor.silva@enetec.unb.br" method="post" role="form" class="contactForm">
                 <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Seu Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars"
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Seu Name" 
                   />
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <input type="email" class="form-control" name="_replyto" id="email" placeholder="Seu Email" data-rule="email" data-msg="Please enter a valid email"
+                  <input type="email" class="form-control" name="_replyto" id="email" placeholder="Seu Email" data-rule="email" data-msg="Ops, este e-mail é inválido"
                   />
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject"
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Assunto"
                   />
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Digite aqui sua mensagem"></textarea>
+                  <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Ops, parece que você esqueceu de escrever sua mensagem!" placeholder="Digite aqui sua mensagem"></textarea>
                   <div class="validation"></div>
                 </div>
                 <div class="text-center">
-                  <button ><input type="submit">Enviar mensagem</input></button>
+                  <input class="btn-secondary" style="background-color: #165b22;" type="submit" value="Enviar Mensagem"></input>
                 </div>
               </form>
             </div>
