--- a/contact.html
+++ b/contact.html
@@ -200,8 +200,7 @@
 
           <div class="col-lg-5 col-md-8">
             <div class="form">
-              <div id="errormessage"></div>
-              <form action="https://formspree.io/victor.silva@enetec.unb.br" method="post" role="form" class="contactForm">
+              <form action="https://formspree.io/victor.silva@enetec.unb.br" method="post" class="contactForm">
                 <div class="form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Seu Name" 
                   />
@@ -226,7 +225,7 @@
                 </div>
               </form>
             </div>
-          </div>
+          
 
         </div>
 
@@ -281,8 +280,6 @@
   <script src="lib/superfish/hoverIntent.js"></script>
   <script src="lib/superfish/superfish.min.js"></script>
 
-  <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
