--- a/contact.html
+++ b/contact.html
@@ -202,7 +202,7 @@
             <div class="form">
               <form action="https://formspree.io/victor.silva@enetec.unb.br" method="post" class="contactForm">
                 <div class="form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Seu Name" 
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Seu Nome" 
                   />
                   <div class="validation"></div>
                 </div>
