--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <!-- Bootstrap CSS File -->
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -113,10 +113,10 @@
               </ul>
             </li>
             <li>
-                <!--  <a href="port.html">Portfólio</a> -->
+              <!--  <a href="port.html">Portfólio</a> -->
             </li>
             <li>
-                <a href="blog">Blog</a>
+              <a href="blog">Blog</a>
             </li>
             <li>
               <a href="contact.html">Contato</a>
@@ -196,7 +196,7 @@
     <!--==========================
       Services Section
       ============================-->
-    <section id="services" style="background: rgb(66,120,130);">
+    <section id="services" style="background: rgb(163, 163, 163);">
       <div class="container wow fadeIn">
         <div class="section-header">
           <h3 class="section-title" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">O que podemos fazer por você</h3>
@@ -326,16 +326,18 @@
     <section id="call-to-action">
       <div class="container wow fadeIn">
         <div class="row">
-          <h2 style="color:white; position: relative; left:3%; ">Projeto de Energia Solar Off-Grid</h2>
-          <div class="col-lg-7 text-center text-lg-left"><iframe class="videorafael" width="560" height="315" src="https://www.youtube.com/embed/OLLCrS4eE0E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <h2 style="color:black; position: relative; left:3%;">Projeto de Energia Solar Off-Grid</h2>
+          <div class="col-lg-7 text-center text-lg-left">
+            <iframe class="videorafael" width="560" height="315" src="https://www.youtube.com/embed/OLLCrS4eE0E" frameborder="0"
+              allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
           <div class="col-lg-4 cta-btn-container text-center">
-            <p style="color:white; text-align: justify;">
-                Há dois anos o nosso cliente Rafael instalou um sistema solar que gera energia a
-                partir do sol e armazena em baterias para ser usada de noite, pois, no local onde mora, a
-                CEB não disponibiliza acesso à energia elétrica. Nos últimos meses, o sistema começou a
-                dar problemas e parou de funcionar, impactando diretamente na sua rotina. A equipe conseguiu ter sucesso no projeto levantando todos os
-                problemas que o sistema tinha, contribuindo para o cliente ter o conforto e a rotina de antes.
+            <p style="color:black; text-align: justify;">
+              Há dois anos o nosso cliente Rafael instalou um sistema solar que gera energia a partir do sol e armazena em baterias para
+              ser usada de noite, pois, no local onde mora, a CEB não disponibiliza acesso à energia elétrica. Nos últimos
+              meses, o sistema começou a dar problemas e parou de funcionar, impactando diretamente na sua rotina. A equipe
+              conseguiu ter sucesso no projeto levantando todos os problemas que o sistema tinha, contribuindo para o cliente
+              ter o conforto e a rotina de antes.
 
             </p>
           </div>
