--- a/fotovoltaica/index.html
+++ b/fotovoltaica/index.html
@@ -64,7 +64,7 @@
                 <a href="">Fotovoltaica</a>
                 <ul>
                   <li>
-                    <a href="../Fotovoltaica/index.html">Simulador de Placas Solares</a>
+                    <a href="../simulador/index.html">Simulador de Placas Solares</a>
                   </li>
 
                   <li>
