--- a/instalacoes/spda.html
+++ b/instalacoes/spda.html
@@ -65,7 +65,7 @@
                 <a href="">Fotovoltaica</a>
                 <ul>
                   <li>
-                    <a href="../Fotovoltaica/index.html">Simulador de Placas Solares</a>
+                    <a href="../simulador/index.html">Simulador de Placas Solares</a>
                   </li>
                 </ul>
                 <li class="menu-has-children">
