--- a/simulador/index.html
+++ b/simulador/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ENETEC - Consultoria</title>
+  <title>ENETEC - Simulador Solar</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="energia, sustentável, economia, solar, sistema, projeto,fotovoltaico, investimento" name="keywords">
+  <meta content="Quer saber quanto economizaria com um sistema de energia solar? Simule aqui!" name="description">
 
   <!-- Favicons -->
   <link href="../img/favicon.png" rel="icon">
@@ -17,6 +17,8 @@
 
   <!-- Bootstrap CSS File -->
   <link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../css/forms.css" rel="stylesheet">
+  <link href="../css/util.css" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
   <link href="../lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -45,50 +47,83 @@
 
       <div id="logo" class="pull-left">
         <a href="#hero">
-          <img id="myImage" src="img/logo-header.png" alt="" title="" /></img>
+          <img id="myImage" src="../img/logo-header.png" alt="" title="" /></img>
         </a>
-        <!-- Uncomment below if you prefer to use a text logo -->
-        <!--<h1><a href="#hero">Regna</a></h1>-->
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
+
           <li>
             <a href="../index.html">Início</a>
           </li>
-          <li class="menu-active">
-            <a href="../index.html#services">Simulador Placas Solares</a>
-          </li>
-          <li>
-           <!-- <a href="../port.html">Portfólio</a> -->
-          </li>
           <li class="menu-has-children">
-            <a href="">Nossos Serviços</a>
+            <a href="">Serviços</a>
             <ul>
-              <li>
-                <a href="#">Energia Solar Fotovoltaica</a>
-              </li>
+              <li class="menu-has-children">
+                <a href="">Fotovoltaica</a>
+                <ul>
+                  <li>
+                    <a href="../simulador/index.html">Simulador de Placas Solares</a>
+                  </li>
 
-              <li>
-                <a href="#">Sistemas de Proteção a Descargas Atmosféricas</a>
-              </li>
-              <li>
-                <a href="#">Instalações Elétricas</a>
-              </li>
-              <li>
-                <a href="#">Termografia</a>
-              </li>
-              <li>
-                <a href="#">Eficiência Energética</a>
-              </li>
+                  <li>
+                    <a href="../index.html">Vantagens</a>
+                  </li>
+                </ul>
+                <li class="menu-has-children">
+                  <a href="">Instalações</a>
+                  <ul>
+                    <li>
+                      <a href="../instalacoes/instala.html">Projetos</a>
+                    </li>
+                    <li>
+                      <a href="../instalacoes/spda.html">Sistemas de proteção a Descarga atmosférica</a>
+                    </li>
+                    <li>
+                      <a href="../instalacoes/normas.html">Adequação às normas</a>
+                    </li>
+                  </ul>
+
+                  <li class="menu-has-children">
+                    <a href="">Eficiência</a>
+                    <ul>
+                      <li>
+                        <a href="../eficiencia/lumino.html">Luminotécnico</a>
+                      </li>
+                      <li>
+                        <a href="../eficiencia/analise.html">Análise de conta de luz</a>
+                      </li>
+                      <li>
+                        <a href="../eficiencia/analise.html">Análise de qualidade de energia</a>
+                      </li>
+                    </ul>
+                  </li>
+
             </ul>
-          </li>
-          <li>
-            <a href="../blog">Blog</a>
-          </li>
-          <li>
-            <a href="../contact.html">Contato</a>
-          </li>
+            <li class="menu-has-children">
+              <a href="">E-books</a>
+              <ul>
+                <li>
+                  <a href="../landing/index.html">8 ideias de como economizar em casa</a>
+                </li>
+                <li>
+                  <a href="../landing2/index.html">Guia de iluminação</a>
+                </li>
+                <li>
+                  <a href="../landing/index3.html">Como proteger suas intalações elétricas</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <!-- <a href="../port.html">Portfólio</a> -->
+            </li>
+            <li>
+              <a href="../blog">Blog</a>
+            </li>
+            <li>
+              <a href="../contact.html">Contato</a>
+            </li>
         </ul>
       </nav>
       <!-- #nav-menu-container -->
@@ -99,9 +134,9 @@
   <!--==========================
     Hero Section
     ============================-->
-  <section id="hero">
+  <section id="hero" style="background: url(../img/hero-bg.jpg) top center fixed;">
     <div class="hero-container">
-
+      <img src="../img/logo-header.png">
       <h2> </h2>
       <p>
         <a href="#simulador" class="btn-get-started">Experimente nosso simulador gratuito!</a>
@@ -121,97 +156,118 @@
       Contact Section
       ============================-->
     <section id="simulador">
-      <div class="container-fluid" style="padding: 25px;  margin: 0;
- position: relative;
-    top: 50%;
-    left: 25%;
-    margin-right: -50%;">
-        <div class="row">
-          <div class="col-md-6 col-sm-12">
-            <div class="block" style="width:100%;">
-              <h2>Simule seu projeto fotovoltaico</h2>
-              <br>
-              <br>
+      <div class="bg-contact2" style="
+    text-align: center;">
+        <div class="container-contact2">
+          <div class="wrap-contact2">
+            <div class="row">
+              <div class=" col-sm-12">
+                <div class="block" style="width:100%;">
+                  <h2>Simule seu projeto fotovoltaico</h2>
+                  <br>
+                  <br>
 
 
 
-              <form method="POST" action="https://formspree.io/victor.silva@enetec.unb.br">
-                Estado
-                <div class="form-group">
-                  <select id="sel" name="Estado" value="DF" style="margin-bottom: 10px;" required>
-                    <option value="AC">AC</option>
-                    <option value="AL">AL</option>
-                    <option value="AP">AP</option>
-                    <option value="AM">AM</option>
-                    <option value="BA">BA</option>
-                    <option value="CE">CE</option>
-                    <option value="DF">DF</option>
-                    <option value="ES">ES</option>
-                    <option value="GO">GO</option>
-                    <option value="MA">MA</option>
-                    <option value="MT">MT</option>
-                    <option value="MS">MS</option>
-                    <option value="MG">MG</option>
-                    <option value="PA">PA </option>
-                    <option value="PB">PB </option>
-                    <option value="PR">PR </option>
-                    <option value="PE">PE</option>
-                    <option value="PI">PI</option>
-                    <option value="RJ">RJ </option>
-                    <option value="RN">RN </option>
-                    <option value="RS">RS</option>
-                    <option value="RO">RO</option>
-                    <option value="RR">RR</option>
-                    <option value="SC">SC</option>
-                    <option value="SP">SP</option>
-                    <option value="SE">SE</option>
-                    <option value="TO">TO</option>
-                  </select>
-                  <input id="name" name="nome" type="text" class="form-control" placeholder="Nome" required/>
-                  <input name="email" id="email" type="email" class="form-control" placeholder="E-mail" required/>
-                  <input id="cons" name="consumo" type="number" class="form-control" placeholder="Digite seu consumo, em kWh" required/>
-                  <input id="cons" name="telefone" type="tel" class="form-control" placeholder="Digite seu telefone(opcional)" />
-                  <input id="tarifa" name="tarifa" type="text" class="form-control" placeholder="Digite a tarifa da sua região" required/>
+                  <form method="POST" class="contact2-form validate-form" action="https://formspree.io/victor.silva@enetec.unb.br">
+                    Estado
+                    <div class="form-group">
+                      <!---->
+                      <select id="sel" name="Estado" value="DF" style="margin-bottom: 10px;" required>
+                        <option value="AC">AC</option>
+                        <option value="AL">AL</option>
+                        <option value="AP">AP</option>
+                        <option value="AM">AM</option>
+                        <option value="BA">BA</option>
+                        <option value="CE">CE</option>
+                        <option value="DF">DF</option>
+                        <option value="ES">ES</option>
+                        <option value="GO">GO</option>
+                        <option value="MA">MA</option>
+                        <option value="MT">MT</option>
+                        <option value="MS">MS</option>
+                        <option value="MG">MG</option>
+                        <option value="PA">PA </option>
+                        <option value="PB">PB </option>
+                        <option value="PR">PR </option>
+                        <option value="PE">PE</option>
+                        <option value="PI">PI</option>
+                        <option value="RJ">RJ </option>
+                        <option value="RN">RN </option>
+                        <option value="RS">RS</option>
+                        <option value="RO">RO</option>
+                        <option value="RR">RR</option>
+                        <option value="SC">SC</option>
+                        <option value="SP">SP</option>
+                        <option value="SE">SE</option>
+                        <option value="TO">TO</option>
+                      </select>
 
+                      <div class="wrap-input2 validate-input" data-validate="Não se esqueça de colocar seu nome!">
 
-                  <button class="btn btn-default">
-                    <input type="submit" placeholder="Simular" id="simule" />
-                  </button>
+                        <input id="name" class="input2" name="nome" type="text" class="form-control" placeholder="Nome" required/>
+                      </div>
 
-                  <input type="text" name="_gotcha" style="display:none" />
-                  <input type="hidden" name="_next" value="#" />
-                  <input type="hidden" name="_language" value="pt_BR" />
+                      <div class="wrap-input2 validate-input" data-validate="Não se esqueça de colocar seu e-mail!">
+                        <input name="email" class="input2" id="email" type="email" class="form-control" placeholder="E-mail" required/>
+                      </div>
+                      <div class="wrap-input2 validate-input" data-validate="Não se esqueça de colocar seu consumo!">
+                        <input id="cons" class="input2" name="consumo" type="number" class="form-control" placeholder="Digite seu consumo, em kWh"
+                          required/>
+                      </div>
+                      <div class="wrap-input2 validate-input">
+                        <input id="cons" class="input2" name="telefone" type="tel" class="form-control" placeholder="Digite seu telefone(opcional)"
+                        />
+                      </div>
+                      <div class="wrap-input2 validate-input">
+                        <input id="tarifa" class="input2" name="tarifa" type="text" class="form-control" placeholder="Digite a tarifa da sua região"
+                          required/>
+                      </div>
+                      <div class="container-contact2-form-btn">
+                        <div class="wrap-contact2-form-btn">
+                          <div class="contact2-form-bgbtn"></div>
+                          <button class="contact2-form-btn">
+                            <input type="submit" placeholder="Simular" id="simule" />
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+                    <input type="text" name="_gotcha" style="display:none" />
+                    <input type="hidden" name="_next" value="#" />
+                    <input type="hidden" name="_language" value="pt_BR" />
                 </div>
-              </form>
+                </form>
 
-              <div style="display:none" id="div-simulador">
-                <p id="texto-nome"></p>
-                <p id="texto-placas">
+                <div style="display:none" id="div-simulador">
+                  <p id="texto-nome"></p>
+                  <p id="texto-placas">
 
-                </p>
-                <p id="texto-custo">
-                </p>
-                <h3>
-                  Gráfico de kWh x mês
-                </h3>
-                <canvas id="grafico" width="560%" height="200%" style=" border:1px solid #000000;">
-                </canvas>
-                <p>
-                  Lembrando que essas medidas são uma estimativa
-                </p>
-                <a href="../contact/index.html">
-                  Para um projeto exato, fale conosco!
-                </a>
+                  </p>
+                  <p id="texto-custo">
+                  </p>
+                  <h3>
+                    Gráfico de kWh x mês
+                  </h3>
+                  <canvas id="grafico" width="560%" height="200%" style=" border:1px solid #000000;">
+                  </canvas>
+                  <p>
+                    Lembrando que essas medidas são uma estimativa
+                  </p>
+                  <a href="../contact/index.html">
+                    Para um projeto exato, fale conosco!
+                  </a>
+                </div>
               </div>
             </div>
+
+
+
+
+
+
           </div>
-
-
-
-
-
-
         </div>
+      </div>
       </div>
 
       </div>
@@ -222,8 +278,8 @@
   </main>
 
   <!--==========================
-    Footer
-    ============================-->
+  Footer
+  ============================-->
   <footer id="footer">
     <div class="footer-top">
       <div class="container">
@@ -234,16 +290,16 @@
     <div class="container">
       <div class="copyright">
         &copy; Copyright
-        <strong>inSite</strong>. All Rights Reserved
+        <strong>ENETEC</strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Regna
-        -->
-        Boostrap & inSite made Tampate
+        All the links in the footer should remain intact.
+        You can delete the links only if you purchased the pro version.
+        Licensing information: https://bootstrapmade.com/license/
+        Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Regna
+      -->
+        Boostrap & ENETEC made Tampate
       </div>
     </div>
   </footer>
@@ -284,10 +340,9 @@
     })();
   </script>
   <!--End of Tawk.to Script-->
-  <script src="simulador.js">
-  </script>
-  <script src="mostrar.js">
-  </script>
+  <script src="mostrar.js"></script>
+  <script src="../js/main2.js"></script>
+  <script src="simulador.js"></script>
 </body>
 
 </html>
